--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,12 @@ jobs:
 
     - name: Build
       run: go build -v -o gsearch ./cmd/
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: bin-gsearch
+        path: |
+          dist
 
     - name: Test
       run: go test -v ./cmd/
