--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,15 +20,25 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-
-    - name: Build
-      run: go build -v -o gsearch ./cmd/
-    - name: Archive production artifacts
+    
+    - name: Unit test
+      run: go test -v ./cmd/  -coverprofile=coverage.out
+    
+    - name: Generate coverage report
+      run: go tool cover -html coverage.out -o coverage.html
+      
+    - name: Archive test coverage result
       uses: actions/upload-artifact@v3
       with:
-        name: bin-gsearch
+        name: coverage.html
         path: |
           .
 
-    - name: Test
-      run: go test -v ./cmd/
+    - name: Build
+      run: go build -v -o gsearch ./cmd/
+    - name: Archive built binary
+      uses: actions/upload-artifact@v3
+      with:
+        name: gsearch
+        path: |
+          .
