--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,16 @@ jobs:
         name: coverage.html
         path: |
           .
+    - name: Update coverage report
+      uses: ncruces/go-coverage-report@v0
+      with:
+        report: 'true'
+        chart: 'true'
+        amend: 'false'
+      if: |
+        matrix.os == 'ubuntu-latest' &&
+        github.event_name == 'push'  
+      continue-on-error: true
 
     - name: Build
       run: go build -v -o gsearch ./cmd/
