--- a/config_sample.json
+++ b/config_sample.json
@@ -1,5 +1,6 @@
 {
     "path": "/path/to/root/",
     "show_content": true,
-    "show_num_lines": 10
+    "show_num_lines": 10,
+    "file_type": ".md"
 }
