--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,15 +46,27 @@ jobs:
       run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git checkout -b cov
           git add README.md
           git commit -m "chore: Updated coverage badge."
 
     - name: Push changes
       if: steps.verify-changed-files.outputs.files_changed == 'true'
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@cov
       with:
           github_token: ${{ github.token }}
           branch: ${{ github.head_ref }}
+          
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v5
+      with:
+        branch: cov
+        
+    - name: Approve Pull Request
+      uses: juliangruber/approve-pull-request-action@v2.0.0
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        number: 1
 
     - name: Build
       run: go build -v -o gsearch ./cmd/
